added votes file on quotes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <link href="https://fonts.googleapis.com/css?family=Lobster&display=swap" rel="stylesheet">
 <div style="text-align:center">
-  <div class="jumbotron">
+  <div class="jumbotron"></div>
     <h1>Great Inspiration Quotes</h1>
   </div>
   <app-quote></app-quote>
