--- a/src/app/votes/votes.component.css
+++ b/src/app/votes/votes.component.css
@@ -1,7 +1,7 @@
 button {
     margin-right: 450px;
-    background-color: black;
     color: white;
     border-radius: 5px;
     margin-bottom: 5px;
+    background-color: green;
 }
