--- a/src/app/quote-form/quote-form.component.html
+++ b/src/app/quote-form/quote-form.component.html
@@ -10,7 +10,7 @@
 
 
 
-          </div>
+          </div><br>
 
           <div class="form-group">
 
@@ -18,17 +18,17 @@
               <input placeholder="Write your full names" type="text" required class="form-control" id="information"
                   [(ngModel)]="newQuotes.information" name='information' #information="ngModel">
 
-          </div>
+          </div><br>
           <div class="form-group">
 
               <label for="information">Authors Name</label>
               <input placeholder="Write the author's full names" type="text" required class="form-control"
                   id="information" [(ngModel)]="newQuotes.author" name='author' #author="ngModel">
 
-          </div>
+          </div><br>
 
 
           <button type="Submit" class="btn1">Add Quote</button>
       </form>
-  </div>
+  </div><br>
 </div>
