--- a/src/app/votes/votes.component.css
+++ b/src/app/votes/votes.component.css
@@ -3,5 +3,11 @@ button {
     color: white;
     border-radius: 5px;
     margin-bottom: 5px;
+    
+}
+.upvote{
     background-color: green;
+}
+.downvote{
+    background-color: red;
 }
