--- a/src/app/votes/votes.component.html
+++ b/src/app/votes/votes.component.html
@@ -1,5 +1,5 @@
 <div>
-    <button (click)="likeBtn()">upvote{{likes}}</button>
-    <button (click)="dislikeBtn()">downvote{{dislikes}}</button>
+    <button (click)="likeBtn()" class="upvote">upvote{{likes}}</button>
+    <button (click)="dislikeBtn()" class="downvote">downvote{{dislikes}}</button>
   
   </div>
