--- a/src/app/quote-form/quote-form.component.html
+++ b/src/app/quote-form/quote-form.component.html
@@ -15,14 +15,14 @@
           <div class="form-group">
 
               <label for="information">Your Name</label>
-              <input placeholder="Write your full names" type="text" required class="form-control" id="information"
+              <input placeholder="Write your full Name " type="text" required class="form-control" id="information"
                   [(ngModel)]="newQuotes.information" name='information' #information="ngModel">
 
           </div><br>
           <div class="form-group">
 
               <label for="information">Authors Name</label>
-              <input placeholder="Write the author's full names" type="text" required class="form-control"
+              <input placeholder="Write author's full names" type="text" required class="form-control"
                   id="information" [(ngModel)]="newQuotes.author" name='author' #author="ngModel">
 
           </div><br>
