changed upvote button to quote.detail.html

--- a/src/app/quote-detail/quote-detail.component.css
+++ b/src/app/quote-detail/quote-detail.component.css
@@ -4,3 +4,9 @@ button {
     border-radius: 5px;
     margin: 5px;
 }
+.upvote{
+    background-color: green;
+}
+.downvote{
+    background-color: red;
+}
