--- a/src/app/quote-detail/quote-detail.component.html
+++ b/src/app/quote-detail/quote-detail.component.html
@@ -1,5 +1,7 @@
 <p>Posted by {{quote.information}}</p>
 <p>Author: {{quote.author}}</p>
 <p>Posted on {{quote.postDate|date}}</p>
-<p>Posted {{quote.postDate|dateCount}} days ago</p><br>
-<button (click)='quoteDeleting(true)'> Delete</button>
+<p>Posted {{quote.postDate|dateCount}} days</p><br>
+<button (click)='quoteDeleting(true)'> Delete Quote</button><br>
+<button (click)="upvote()" class="upvote">upvote{{likes}}</button>
+    <button (click)="downvote()" class="downvote">downvote{{dislikes}}</button>
