--- a/src/app/quote-detail/quote-detail.component.html
+++ b/src/app/quote-detail/quote-detail.component.html
@@ -2,6 +2,8 @@
 <p>Author: {{quote.author}}</p>
 <p>Posted on {{quote.postDate|date}}</p>
 <p>Posted {{quote.postDate|dateCount}} days</p><br>
-<button (click)='quoteDeleting(true)'> Delete Quote</button><br>
+<h3>Votes:{{quote.upvote}}</h3>
 <button (click)="upvote()" class="upvote">upvote{{likes}}</button>
-    <button (click)="downvote()" class="downvote">downvote{{dislikes}}</button>
+    <button (click)="downvote()" class="downvote">downvote{{dislikes}}</button><br>
+    <br><br>
+    <button (click)='quoteDeleting(true)'> Delete Quote</button>
