--- a/src/app/quote-form/quote-form.component.html
+++ b/src/app/quote-form/quote-form.component.html
@@ -14,16 +14,16 @@
 
           <div class="form-group">
 
-              <label for="information">Your Name</label>
-              <input placeholder="Write your full Name " type="text" required class="form-control" id="information"
+              <label for="name information">Your Name</label>
+              <input placeholder="Write your full Name " type="text" required class="form-control" id="name information"
                   [(ngModel)]="newQuotes.information" name='information' #information="ngModel">
 
           </div><br>
           <div class="form-group">
 
-              <label for="information">Authors Name</label>
+              <label for=" authors information">Authors Name</label>
               <input placeholder="Write author's full names" type="text" required class="form-control"
-                  id="information" [(ngModel)]="newQuotes.author" name='author' #author="ngModel">
+                  id=" authors information" [(ngModel)]="newQuotes.author" name='author' #author="ngModel">
 
           </div><br>
 
