--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -6,7 +6,7 @@
     <div class="col-md-8">
       <div class="quote" *ngFor='let quote of quotes;let i = index'>
         <p> {{quote.name}}</p>
-        <button (click)='toogleDetails(i)'>click to view Details</button>
+        <button (click)='toogleDetails(i)'> Quote Details</button>
 
         <app-quote-detail *ngIf="quote.showInformation" [quote]='quote' (deleteit)='deleteQuote($event,i)'>
         </app-quote-detail>
