added most voted quotes on quote.component.html

--- a/src/app/quote-form/quote-form.component.html
+++ b/src/app/quote-form/quote-form.component.html
@@ -23,8 +23,9 @@
 
               <label for=" authors information">Authors Name</label>
               <input placeholder="Write author's full names" type="text" required class="form-control"
-                  id=" authors information" [(ngModel)]="newQuotes.author" name='author' #author="ngModel">
-
+                  id=" authors information" [(ngModel)]="newQuotes.author" name='author' #author="ngModel"><br>
+                  <label for="complete">Completion</label>
+                  <input type='date' id="complete" required>
           </div><br>
 
 
