--- a/src/app/quote-detail/quote-detail.component.html
+++ b/src/app/quote-detail/quote-detail.component.html
@@ -1,9 +1,9 @@
 <p>Posted by {{quote.information}}</p>
 <p>Author: {{quote.author}}</p>
-<p>Posted on {{quote.postDate|date}}</p>
-<p>Posted {{quote.postDate|dateCount}} days</p><br>
-<h3>Votes:{{likes}}</h3>
-<button (click)="upvote()" class="upvote">upvote{{likes}}</button>
-    <button (click)="downvote()" class="downvote">downvote{{dislikes}}</button><br>
-    <br><br>
-    <button (click)='quoteDeleting(true)'> Delete Quote</button>
+<!-- <p>Posted on {{quote.postDate|date}}</p> -->
+<p>Posted {{quote.postDate|dateCount}} days ago</p><br>
+<h3>Likes:{{quote.counter1}}</h3>
+<h3>Dislikes: {{quote.counter2}}</h3>
+
+<br><br>
+<button (click)='quoteDeleting(true)'> Delete Quote</button>
